using Eigen matrix and vector operating method to implement kinematic calculation.

--- a/KinemicsCppTester/KinemicsCppTester.vcxproj
+++ b/KinemicsCppTester/KinemicsCppTester.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="Kinemics.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="PolynomialRoot.h" />
+    <ClInclude Include="RotationMatrix.h" />
     <ClInclude Include="struct.h" />
   </ItemGroup>
   <ItemGroup>
