--- a/KinemicsCppTester/KinemicsCppTester.vcxproj.filters
+++ b/KinemicsCppTester/KinemicsCppTester.vcxproj.filters
@@ -18,20 +18,17 @@
     <ClCompile Include="KinemicsCppTester.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
-    <ClCompile Include="Matrix.cpp">
-      <Filter>來源檔案</Filter>
-    </ClCompile>
     <ClCompile Include="Extension.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
     <ClCompile Include="PolynomialRoot.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="Matrix.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Matrix.h">
-      <Filter>標頭檔</Filter>
-    </ClInclude>
     <ClInclude Include="struct.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
@@ -42,6 +39,12 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="PolynomialRoot.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="RotationMatrix.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrix.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
