Finish FK and IK testing for YASKAWA but maybe not suit for other brand. Notice: must be careful about the accuracy of number in C++.

--- a/KinemicsCppTester/KinemicsCppTester.vcxproj
+++ b/KinemicsCppTester/KinemicsCppTester.vcxproj
@@ -134,7 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Extension.h" />
-    <ClInclude Include="Kinemics.h" />
+    <ClInclude Include="Kinematics.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="PolynomialRoot.h" />
     <ClInclude Include="RotationMatrix.h" />
